--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dIx-vV-5aB">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Items View Controller-->
+        <scene sceneID="9Nc-oV-MAh">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="dIx-vV-5aB" customClass="ItemsViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ywh-Lk-BWD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="sG2-TD-NRH">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ww-tC-Vms">
+                                    <rect key="frame" x="8" y="15" width="195" height="30"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <state key="normal" title="Edit"/>
+                                    <connections>
+                                        <action selector="toggleEditingMode:" destination="dIx-vV-5aB" eventType="touchUpInside" id="VG7-B7-Jbh"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HV3-uI-XBi">
+                                    <rect key="frame" x="211" y="15" width="195" height="30"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <state key="normal" title="Add"/>
+                                    <connections>
+                                        <action selector="addNewItem:" destination="dIx-vV-5aB" eventType="touchUpInside" id="7Xq-uE-nR3"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="2Ww-tC-Vms" secondAttribute="bottom" constant="15" id="G0p-Kf-2hC"/>
+                                <constraint firstItem="HV3-uI-XBi" firstAttribute="top" secondItem="sG2-TD-NRH" secondAttribute="top" constant="15" id="Gfp-rD-9z9"/>
+                                <constraint firstItem="2Ww-tC-Vms" firstAttribute="leading" secondItem="sG2-TD-NRH" secondAttribute="leading" constant="8" id="LMY-oI-7cc"/>
+                                <constraint firstItem="2Ww-tC-Vms" firstAttribute="centerY" secondItem="sG2-TD-NRH" secondAttribute="centerY" id="UHB-ym-WdF"/>
+                                <constraint firstItem="HV3-uI-XBi" firstAttribute="centerY" secondItem="sG2-TD-NRH" secondAttribute="centerY" id="XCs-1p-VEB"/>
+                                <constraint firstItem="HV3-uI-XBi" firstAttribute="width" secondItem="2Ww-tC-Vms" secondAttribute="width" id="ddi-ec-tEF"/>
+                                <constraint firstItem="2Ww-tC-Vms" firstAttribute="top" secondItem="sG2-TD-NRH" secondAttribute="top" constant="15" id="owk-uU-n0w"/>
+                                <constraint firstItem="HV3-uI-XBi" firstAttribute="leading" secondItem="2Ww-tC-Vms" secondAttribute="trailing" constant="8" id="ozK-Jz-NM7"/>
+                                <constraint firstAttribute="bottom" secondItem="HV3-uI-XBi" secondAttribute="bottom" constant="15" id="ubm-7S-STI"/>
+                                <constraint firstAttribute="trailing" secondItem="HV3-uI-XBi" secondAttribute="trailing" constant="8" id="yGl-63-29g"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="65" id="G6j-sS-go1" customClass="ItemCell" customModule="Homepwner" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="414" height="65"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="G6j-sS-go1" id="ESr-zT-9BJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="64.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6np-iF-Qb2">
+                                            <rect key="frame" x="20" y="10" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BZf-pA-wA6">
+                                            <rect key="frame" x="20" y="34" width="36" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IRu-mh-IHk">
+                                            <rect key="frame" x="352" y="22" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="BZf-pA-wA6" firstAttribute="leading" secondItem="6np-iF-Qb2" secondAttribute="leading" id="UZw-em-iC6"/>
+                                        <constraint firstItem="IRu-mh-IHk" firstAttribute="centerY" secondItem="ESr-zT-9BJ" secondAttribute="centerY" id="bJV-Us-bkX"/>
+                                        <constraint firstItem="6np-iF-Qb2" firstAttribute="leading" secondItem="ESr-zT-9BJ" secondAttribute="leading" constant="20" id="eTf-MK-WgJ"/>
+                                        <constraint firstAttribute="trailing" secondItem="IRu-mh-IHk" secondAttribute="trailing" constant="20" id="fwp-56-wBl"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="BZf-pA-wA6" secondAttribute="bottom" constant="3" id="t8n-nl-jZI"/>
+                                        <constraint firstItem="6np-iF-Qb2" firstAttribute="top" secondItem="ESr-zT-9BJ" secondAttribute="top" constant="10" id="yYi-LA-sg6"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="6np-iF-Qb2" id="b4l-Jf-elG"/>
+                                    <outlet property="serialNumberLabel" destination="BZf-pA-wA6" id="lgx-uP-34B"/>
+                                    <outlet property="valueLabel" destination="IRu-mh-IHk" id="Qu1-Zn-NGb"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="dIx-vV-5aB" id="azC-PF-lZd"/>
+                            <outlet property="delegate" destination="dIx-vV-5aB" id="Vnc-Eo-rpT"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vtK-2W-ag9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="71.651785714285708"/>
         </scene>
     </scenes>
 </document>
