--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dIx-vV-5aB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DK0-aI-XXl">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -103,10 +103,11 @@
                             <outlet property="delegate" destination="dIx-vV-5aB" id="Vnc-Eo-rpT"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="skm-OK-5NG"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vtK-2W-ag9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="71.651785714285708"/>
+            <point key="canvasLocation" x="928.98550724637687" y="71.651785714285708"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="P7r-ZJ-67j">
@@ -117,7 +118,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gmp-1O-4oe">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ftb-yK-kZ4">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
@@ -133,6 +134,9 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="tx7-9U-JD2" id="Bjo-qi-Cl6"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -150,6 +154,9 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="tx7-9U-JD2" id="aMf-aV-KXs"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -167,11 +174,14 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="tx7-9U-JD2" id="QiR-Kl-oQA"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DD2-Jd-zSh">
-                                        <rect key="frame" x="0.0" y="114" width="414" height="738"/>
+                                        <rect key="frame" x="0.0" y="114" width="414" height="694"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -184,6 +194,7 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="gmp-1O-4oe" firstAttribute="leading" secondItem="aW0-TC-wKS" secondAttribute="leading" id="Ted-BO-D41"/>
                             <constraint firstItem="gmp-1O-4oe" firstAttribute="top" secondItem="aW0-TC-wKS" secondAttribute="top" id="fy9-Ut-eml"/>
@@ -191,6 +202,9 @@
                             <constraint firstAttribute="bottom" secondItem="gmp-1O-4oe" secondAttribute="bottom" id="shE-hB-MyR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="aW0-TC-wKS"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="GuM-MW-PdW" appends="YES" id="tou-Fg-7G4"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="DD2-Jd-zSh" id="hea-ke-9rk"/>
@@ -200,8 +214,31 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wcb-ev-WRG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="GuM-MW-PdW">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="tx7-9U-JD2" id="sYy-xK-p8f"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="724.63768115942037" y="67.633928571428569"/>
+            <point key="canvasLocation" x="1634.7826086956522" y="67.633928571428569"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lnt-Mu-mCF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DK0-aI-XXl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hra-U9-WhU">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="dIx-vV-5aB" kind="relationship" relationship="rootViewController" id="XBX-zI-4cy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xrg-zK-5Oc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="71.651785714285708"/>
         </scene>
     </scenes>
 </document>
