--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--Homepwner-->
         <scene sceneID="9Nc-oV-MAh">
             <objects>
                 <tableViewController id="dIx-vV-5aB" customClass="ItemsViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,44 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="sG2-TD-NRH">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ww-tC-Vms">
-                                    <rect key="frame" x="8" y="15" width="195" height="30"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                    <state key="normal" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="dIx-vV-5aB" eventType="touchUpInside" id="VG7-B7-Jbh"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HV3-uI-XBi">
-                                    <rect key="frame" x="211" y="15" width="195" height="30"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                    <state key="normal" title="Add"/>
-                                    <connections>
-                                        <action selector="addNewItem:" destination="dIx-vV-5aB" eventType="touchUpInside" id="7Xq-uE-nR3"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="bottom" secondItem="2Ww-tC-Vms" secondAttribute="bottom" constant="15" id="G0p-Kf-2hC"/>
-                                <constraint firstItem="HV3-uI-XBi" firstAttribute="top" secondItem="sG2-TD-NRH" secondAttribute="top" constant="15" id="Gfp-rD-9z9"/>
-                                <constraint firstItem="2Ww-tC-Vms" firstAttribute="leading" secondItem="sG2-TD-NRH" secondAttribute="leading" constant="8" id="LMY-oI-7cc"/>
-                                <constraint firstItem="2Ww-tC-Vms" firstAttribute="centerY" secondItem="sG2-TD-NRH" secondAttribute="centerY" id="UHB-ym-WdF"/>
-                                <constraint firstItem="HV3-uI-XBi" firstAttribute="centerY" secondItem="sG2-TD-NRH" secondAttribute="centerY" id="XCs-1p-VEB"/>
-                                <constraint firstItem="HV3-uI-XBi" firstAttribute="width" secondItem="2Ww-tC-Vms" secondAttribute="width" id="ddi-ec-tEF"/>
-                                <constraint firstItem="2Ww-tC-Vms" firstAttribute="top" secondItem="sG2-TD-NRH" secondAttribute="top" constant="15" id="owk-uU-n0w"/>
-                                <constraint firstItem="HV3-uI-XBi" firstAttribute="leading" secondItem="2Ww-tC-Vms" secondAttribute="trailing" constant="8" id="ozK-Jz-NM7"/>
-                                <constraint firstAttribute="bottom" secondItem="HV3-uI-XBi" secondAttribute="bottom" constant="15" id="ubm-7S-STI"/>
-                                <constraint firstAttribute="trailing" secondItem="HV3-uI-XBi" secondAttribute="trailing" constant="8" id="yGl-63-29g"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="65" id="G6j-sS-go1" customClass="ItemCell" customModule="Homepwner" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="414" height="65"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="G6j-sS-go1" id="ESr-zT-9BJ">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="64.5"/>
@@ -103,7 +68,13 @@
                             <outlet property="delegate" destination="dIx-vV-5aB" id="Vnc-Eo-rpT"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="skm-OK-5NG"/>
+                    <navigationItem key="navigationItem" title="Homepwner" id="skm-OK-5NG">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="YBZ-cd-aNA">
+                            <connections>
+                                <action selector="addNewItem:" destination="dIx-vV-5aB" id="q8N-Xt-7BI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vtK-2W-ag9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
